[project]
name = "learning-theory"
version = "0.1.0"
description = "Working on learning theory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "streamlit>=1.44.0",
]
[tool.setuptools]
packages = ["linear_algebra"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
